load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")
load(
    "@io_bazel_rules_scala//scala:providers.bzl",
    _declare_scalac_provider = "declare_scalac_provider",
)

scala_toolchain(
    name = "global_toolchain_impl",
    scalac_provider_attr = "//:scalac_default",
    scalacopts = [
        "-unchecked",
        "-deprecation",
        "-feature",
        "-Xmax-classfile-name",
        "240",
        "-Ywarn-unused-import",
        "-Ywarn-unused",
    ],
    dependency_mode = "plus-one",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "global_toolchain",
    toolchain = "global_toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

_declare_scalac_provider(
    name = "scalac_default",
    default_classpath = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
    default_macro_classpath = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
    default_repl_classpath = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
        "@org_scala_lang_scala_compiler",
    ],
    visibility = ["//visibility:public"],
)
