load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")
load(
    "@io_bazel_rules_scala//scala:providers.bzl",
    "declare_deps_provider",
)

scala_toolchain(
    name = "global_toolchain_impl",
    dep_providers = [
        ":my_scala_compile_classpath_provider",
        ":my_scala_library_classpath_provider",
        ":my_scala_macro_classpath_provider",
        ":my_scala_xml_provider",
    ],
    dependency_mode = "plus-one",
    enable_code_coverage_aspect = "on",
    scalacopts = [
        "-unchecked",
        "-deprecation",
        "-feature",
        "-Xmax-classfile-name",
        "240",
        "-Ywarn-unused-import",
        "-Ywarn-unused",
    ],
    #unused_dependency_checker_mode = "error",
    #strict_deps_mode = "error",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "global_toolchain",
    toolchain = "global_toolchain_impl",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

declare_deps_provider(
    name = "my_scala_compile_classpath_provider",
    deps_id = "scala_compile_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@org_scala_lang_scala_compiler",
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "my_scala_library_classpath_provider",
    deps_id = "scala_library_classpath",
    deps = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "my_scala_macro_classpath_provider",
    deps_id = "scala_macro_classpath",
    deps = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "my_scala_xml_provider",
    deps_id = "scala_xml",
    deps = ["@org_scala_lang_modules_scala_xml_2_12"],
)
