package(default_visibility = ["//visibility:public"])

scala_import(
    name = "main_dependencies",
    deps = [
        "@com_gitblit_gitblit//jar",
        "@com_github_pathikrit_better_files_2_12//jar",
        "@org_scala_lang_scala_library//jar",
    ],
)

scala_import(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
