package(default_visibility = ["//visibility:public"])

scala_import(
    name = "main_dependencies",
    deps = [
        "//models/maven-model:main_dependencies",
        "//third_party/org/apache/maven/resolver:maven_resolver_api",
        "//third_party/org/scala-lang:scala_library",
    ],
)

scala_import(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
        "//third_party/org/specs2:specs2_common_2_12",
        "//third_party/org/specs2:specs2_core_2_12",
        "//third_party/org/specs2:specs2_junit_2_12",
        "//third_party/org/specs2:specs2_matcher_2_12",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
