package(default_visibility = ["//visibility:public"])

scala_import(
    name = "main_dependencies",
    deps = [
        "//models/maven-model:main_dependencies",
        "@org_apache_maven_resolver_maven_resolver_api//jar",
        "@org_scala_lang_scala_library//jar",
    ],
)

scala_import(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
        "@org_specs2_specs2_common_2_12//jar",
        "@org_specs2_specs2_core_2_12//jar",
        "@org_specs2_specs2_junit_2_12//jar",
        "@org_specs2_specs2_matcher_2_12//jar",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
