package(default_visibility = ["//visibility:public"])

scala_import(
    name = "main_dependencies",
    deps = [
        "//dependency-resolver/maven-dependency-resolver-api:main_dependencies",
        "@commons_codec_commons_codec//jar",
        "@javax_servlet_javax_servlet_api//jar",
        "@org_apache_maven_maven_model//jar",
        "@org_apache_maven_maven_model_builder//jar",
        "@org_codehaus_mojo_mrm_api//jar",
        "@org_codehaus_mojo_mrm_maven_plugin//jar",
        "@org_codehaus_mojo_mrm_servlet//jar",
        "@org_scala_lang_modules_scala_xml_2_12//jar",
        "@org_scala_lang_scala_library//jar",
        "@org_specs2_specs2_common_2_12//jar",
        "@org_specs2_specs2_core_2_12//jar",
        "@org_specs2_specs2_junit_2_12//jar",
        "@org_specs2_specs2_matcher_2_12//jar",
        "@org_specs2_specs2_matcher_extra_2_12//jar",
    ],
)

scala_import(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
