package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    testonly = 1,
    deps = [
        "//dependency-resolver/maven-dependency-resolver-api:main_dependencies",
        "@commons_codec_commons_codec",
        "@javax_servlet_javax_servlet_api//:linkable",
        "@org_apache_maven_maven_model",
        "@org_apache_maven_maven_model_builder",
        "@org_codehaus_mojo_mrm_api",
        "@org_codehaus_mojo_mrm_maven_plugin",
        "@org_codehaus_mojo_mrm_servlet",
        "@org_scala_lang_modules_scala_xml_2_12",
        "@org_scala_lang_scala_library",
        "@org_specs2_specs2_common_2_12",
        "@org_specs2_specs2_core_2_12",
        "@org_specs2_specs2_junit_2_12",
        "@org_specs2_specs2_matcher_2_12",
        "@org_specs2_specs2_matcher_extra_2_12",
    ],
)

scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
        "@com_wix_http_testkit_2_12",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
