package(default_visibility = ["//visibility:public"])

scala_import(
    name = "main_dependencies",
    runtime_deps = [
        "@org_codehaus_plexus_plexus_interpolation//jar",
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-api:main_dependencies",
        "@com_github_pathikrit_better_files_2_12//jar",
        "@org_apache_maven_maven_model//jar",
        "@org_apache_maven_maven_resolver_provider//jar",
        "@org_apache_maven_resolver_maven_resolver_api//jar",
        "@org_apache_maven_resolver_maven_resolver_connector_basic//jar",
        "@org_apache_maven_resolver_maven_resolver_impl//jar",
        "@org_apache_maven_resolver_maven_resolver_spi//jar",
        "@org_apache_maven_resolver_maven_resolver_transport_file//jar",
        "@org_apache_maven_resolver_maven_resolver_transport_http//jar",
        "@org_apache_maven_resolver_maven_resolver_util//jar",
        "@org_eclipse_sisu_org_eclipse_sisu_plexus//jar",
        "@org_scala_lang_scala_library//jar",
        "@org_sonatype_sisu_sisu_guice_no_aop//jar",
    ],
)

scala_import(
    name = "tests_dependencies",
    testonly = 1,
    runtime_deps = [
        "//dependency-resolver/maven-dependency-resolver/src/test/resources",
    ],
    deps = [
        "main_dependencies",
        "//dependency-resolver/maven-dependency-resolver-testkit:main_dependencies",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
