package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    runtime_deps = [
        "@org_codehaus_plexus_plexus_interpolation",
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-api:main_dependencies",
        "@com_github_pathikrit_better_files_2_12",
        "@org_apache_maven_maven_model",
        "@org_apache_maven_maven_resolver_provider",
        "@org_apache_maven_resolver_maven_resolver_api",
        "@org_apache_maven_resolver_maven_resolver_connector_basic",
        "@org_apache_maven_resolver_maven_resolver_impl",
        "@org_apache_maven_resolver_maven_resolver_spi",
        "@org_apache_maven_resolver_maven_resolver_transport_file",
        "@org_apache_maven_resolver_maven_resolver_transport_http",
        "@org_apache_maven_resolver_maven_resolver_util",
        "@org_eclipse_sisu_org_eclipse_sisu_plexus",
        "@org_scala_lang_scala_library",
        "@org_sonatype_sisu_sisu_guice_no_aop",
    ],
)

scala_library(
    name = "tests_dependencies",
    testonly = 1,
    runtime_deps = [
        "//dependency-resolver/maven-dependency-resolver/src/test/resources",
    ],
    deps = [
        "main_dependencies",
        "//dependency-resolver/maven-dependency-resolver-testkit:main_dependencies",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
