package(default_visibility = ["//visibility:public"])

scala_import(
    name = "main_dependencies",
    deps = [
        "//dependency-resolver/maven-dependency-resolver:main_dependencies",
        "//dependency-resolver/maven-dependency-resolver-api:main_dependencies",
        "//models/maven-bazel-model-translation:main_dependencies",
        "//models/maven-model:main_dependencies",
        "//wix-bazel-repositories/bazel-repositories-core:main_dependencies",
        "@com_fasterxml_jackson_core_jackson_core//jar",
        "@com_fasterxml_jackson_core_jackson_databind//jar",
        "@com_fasterxml_jackson_module_jackson_module_scala_2_12//jar",
        "@com_github_pathikrit_better_files_2_12//jar",
        "@org_apache_maven_maven_artifact//jar",
        "@org_eclipse_jgit_org_eclipse_jgit//jar",
        "@org_scala_lang_scala_library//jar",
    ],
)

scala_import(
    name = "tests_dependencies",
    testonly = 1,
    runtime_deps = [
        "//dependency-synchronizer/bazel-deps-synchronizer/src/test/resources",
    ],
    deps = [
        "main_dependencies",
        "//dependency-resolver/maven-dependency-resolver-testkit:main_dependencies",
        "@com_gitblit_gitblit//jar",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
