package(default_visibility = ["//visibility:public"])

scala_import(
    name = "main_dependencies",
    deps = [
        "//migrator/bazel-migrator-model:main_dependencies",
        "//models/maven-model:main_dependencies",
        "//third_party/org/scala-lang:scala_library",
        "//third_party/org/specs2:specs2_matcher_2_12",
    ],
)

scala_import(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
