package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    deps = [
        "//migrator/bazel-migrator-model:main_dependencies",
        "//models/maven-model:main_dependencies",
        "@org_scala_lang_scala_library//jar",
        "@org_specs2_specs2_matcher_2_12//jar",
    ],
)

scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
