package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    deps = [
        "//migrator/bazel-migrator-model:main_dependencies",
        "//models/maven-model:main_dependencies",
        "@org_jgrapht_jgrapht_core",
        "@org_scala_lang_scala_library",
    ],
)

scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
        "//migrator/bazel-migrator-model-testkit:main_dependencies",
        "@org_specs2_specs2_common_2_12",
        "@org_specs2_specs2_core_2_12",
        "@org_specs2_specs2_junit_2_12",
        "@org_specs2_specs2_matcher_2_12",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
