package(default_visibility = ["//visibility:public"])

scala_import(
    name = "main_dependencies",
    runtime_deps = [
        "@ch_qos_logback_logback_classic//jar",
    ],
    deps = [
        "@com_fasterxml_jackson_core_jackson_databind//jar",
        "@com_fasterxml_jackson_module_jackson_module_scala_2_12//jar",
        "@org_scala_lang_scala_library//jar",
        "@org_scalaj_scalaj_http_2_12//jar",
        "@org_slf4j_slf4j_api//jar",
    ],
)

scala_import(
    name = "tests_dependencies",
    testonly = 1,
    runtime_deps = [
        "//migrator/codota-thin-client/src/it/resources",
    ],
    deps = [
        "main_dependencies",
        "@com_wix_http_testkit_2_12//jar",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
