package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    runtime_deps = [
        "@ch_qos_logback_logback_classic",
    ],
    deps = [
        "@com_fasterxml_jackson_core_jackson_databind",
        "@com_fasterxml_jackson_module_jackson_module_scala_2_12",
        "@org_scala_lang_scala_library",
        "@org_scalaj_scalaj_http_2_12",
        "@org_slf4j_slf4j_api",
    ],
)

scala_library(
    name = "tests_dependencies",
    testonly = 1,
    runtime_deps = [
        "//migrator/codota-thin-client/src/it/resources",
    ],
    deps = [
        "main_dependencies",
        "@com_wix_http_testkit_2_12",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
