package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    runtime_deps = [
        "//migrator/wix-bazel-migrator/src/main/resources",
    ],
    deps = [
        "//dependency-synchronizer/bazel-deps-synchronizer:main_dependencies",
        "//migrator/bazel-external-graph-transformer:main_dependencies",
        "//migrator/bazel-migrator:main_dependencies",
        "//migrator/codota-thin-client:main_dependencies",
        "//repo-analyzer/maven-repo-analyzer:main_dependencies",
        "//wix-bazel-repositories/bazel-repositories-core:main_dependencies",
        "@ch_qos_logback_logback_classic//jar",
        "@com_codota_codota_sdk_java//jar",
        "@com_fasterxml_jackson_core_jackson_annotations//jar",
        "@com_fasterxml_jackson_core_jackson_databind//jar",
        "@com_fasterxml_jackson_module_jackson_module_scala_2_12//jar",
        "@com_github_scopt_scopt_2_12//jar",
        "@org_scala_lang_scala_library//jar",
        "@org_scalaj_scalaj_http_2_12//jar",
    ],
)

scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
        "//dependency-resolver/maven-dependency-resolver-testkit:main_dependencies",
        "//migrator/bazel-migrator-model-testkit:main_dependencies",
        "//test-utils:main_dependencies",
        "//third_party/com/wixpress/hoopoe:hoopoe_specs2",
        "@com_gitblit_gitblit//jar",
        "@com_github_marschall_memoryfilesystem//jar",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
