package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    deps = [
        "//dependency-resolver/maven-dependency-resolver:main_dependencies",
        "//dependency-resolver/maven-dependency-resolver-api:main_dependencies",
        "//migrator/bazel-migrator-model:main_dependencies",
        "//models/maven-bazel-model-translation:main_dependencies",
        "//models/maven-model:main_dependencies",
        "@org_apache_maven_maven_model//jar",
        "@org_codehaus_plexus_plexus_utils//jar",
        "@org_scala_lang_scala_library//jar",
    ],
)

scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "main_dependencies",
        "//dependency-resolver/maven-dependency-resolver-testkit:main_dependencies",
        "//migrator/bazel-migrator-model-testkit:main_dependencies",
        "@com_github_marschall_memoryfilesystem//jar",
        "@org_specs2_specs2_common_2_12//jar",
        "@org_specs2_specs2_core_2_12//jar",
        "@org_specs2_specs2_junit_2_12//jar",
        "@org_specs2_specs2_matcher_2_12//jar",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
