filegroup(name = "tools_bazel_scripts",
          srcs = ["custom-bazel-script",
                  "resolve_2nd_party_repositories.py",
                  "load_2nd_party_repositories.bzl",
                  "sync_fixed_versions_with_ci",
                  "utils.py",
                  ],
          visibility = ["//visibility:public"],)