package(default_visibility = ["//visibility:public"])

scala_library(
    name = "agg=bazel/migrator_bazel/migrator/tinker_bazel/migrator/transform_build/maven/analysis",
    srcs = [
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator:sources",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/tinker:sources",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/transform:sources",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/build/maven/analysis:sources",
    ],
    runtime_deps = [
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-api/src/main/scala/com/wixpress/build/maven",
        "//dependency-resolver/maven-dependency-resolver/src/main/scala/com/wixpress/build/maven",
        "//dependency-synchronizer/bazel-deps-synchronizer/src/main/scala/com/wixpress/build/bazel",
        "//dependency-synchronizer/bazel-deps-synchronizer/src/main/scala/com/wixpress/build/sync",
        "//migrator/bazel-external-graph-transformer/src/main/scala/com/wix/bazel/migrator/transform",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
        "//migrator/bazel-migrator/src/main/java/com/wix/bazel/migrator/transform",
        "//migrator/codota-thin-client/src/main/scala/com/wixpress/build/codota",
        "//migrator/wix-bazel-migrator:main_dependencies",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/workspace",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/workspace/resolution",
        "//models/maven-bazel-model-translation/src/main/scala/com/wix/build/maven/translation",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
        "//repo-analyzer/maven-repo-analyzer/src/main/java/com/wix/build/maven/analysis",
        "//wix-bazel-repositories/bazel-repositories-core/src/main/scala/com/wixpress/build/bazel/repositories",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/external/registry:registry",
        "@com_codota_codota_sdk_java//:com_codota_codota_sdk_java",
        "@com_fasterxml_jackson_core_jackson_annotations//:com_fasterxml_jackson_core_jackson_annotations",
        "@com_fasterxml_jackson_core_jackson_core//:com_fasterxml_jackson_core_jackson_core",
        "@com_fasterxml_jackson_core_jackson_databind//:com_fasterxml_jackson_core_jackson_databind",
        "@com_fasterxml_jackson_module_jackson_module_scala_2_12//:com_fasterxml_jackson_module_jackson_module_scala_2_12",
        "@com_github_pathikrit_better_files_2_12//:com_github_pathikrit_better_files_2_12",
        "@com_github_scopt_scopt_2_12//:com_github_scopt_scopt_2_12",
        "@junit_junit//:junit_junit",
        "@org_apache_maven_maven_artifact//:org_apache_maven_maven_artifact",
        "@org_slf4j_slf4j_api//:org_slf4j_slf4j_api",
    ],
)
